# pytorch_general_techs

ml_train/: .gitignore  Makefile  README.md  _validate.py  _verify_changes.py  pyproject.toml  requirements-dev.txt  requirements.txt  大模型机器学习技术全景.md
ml_train/00_foundations/: 00_deep_learning_basics.ipynb
ml_train/01_data_engineering/: 01_data_collection.ipynb  02_data_cleaning.ipynb  03_data_mixture.ipynb  04_data_annotation.ipynb  05_data_pipeline_engineering.ipynb
ml_train/02_learning_paradigms/: 01_supervised_learning.ipynb  02_self_supervised_learning.ipynb  03_unsupervised_learning.ipynb  04_semi_supervised_learning.ipynb  05_reinforcement_learning.ipynb  06_transfer_learning.ipynb  07_meta_learning.ipynb  08_multi_task_learning.ipynb  09_federated_learning.ipynb  10_contrastive_learning.ipynb  11_curriculum_learning.ipynb  12_active_learning.ipynb  13_online_learning.ipynb  14_deep_learning_basics.ipynb
ml_train/03_architecture_design/: 01_overall_architecture.ipynb  02_attention_mechanism.ipynb  03_positional_encoding.ipynb  04_feed_forward_network.ipynb  05_normalization.ipynb  06_mixture_of_experts.ipynb  07_diffusion_llm.ipynb
ml_train/04_pretraining/: 01_training_objectives.ipynb  02_training_strategies.ipynb  03_training_stability.ipynb
ml_train/05_distributed_training/: 01_data_parallelism.ipynb  02_model_parallelism.ipynb  03_hybrid_parallelism.ipynb  04_communication_optimization.ipynb
ml_train/06_fine_tuning/: 01_full_fine_tuning.ipynb  02_peft.ipynb  03_instruction_fine_tuning.ipynb
ml_train/07_alignment_training/: 01_rlhf.ipynb  (+4 more)
(+380 files in other folders)
