[project]
name = "ml-train-notebooks"
version = "0.1.0"
description = "Runnable educational notebooks covering LLM training techniques."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "transformers>=4.30.0",
    "matplotlib>=3.7.0",
    "requests>=2.28.0",
    "scipy>=1.10.0",
]

[tool.ml_train]
notebook_validation = "python3 scripts/validate_notebooks.py"
